--- a/Web_Franco/Views/Shared/_Layout.cshtml
+++ b/Web_Franco/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <div class="container">
             <a class="navbar-brand" href="~/">
                 <i class="fas fa-code me-2"></i>
-                Franco Mamani
+                Franco Mamani 2
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                 <span class="navbar-toggler-icon"></span>
